--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@conform-to/react": "^1.6.1",
+    "@conform-to/zod": "^1.6.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -17,14 +19,23 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@tabler/icons-react": "^3.34.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-fetch-backend": "^6.0.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.513.0",
+    "motion": "^12.16.0",
+    "pretty-cache-header": "^1.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-router": "^7.5.3",
-    "tailwind-merge": "^3.3.0"
+    "remix-i18next": "^7.2.1",
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.61"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
@@ -36,6 +47,7 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
+    "vite-plugin-devtools-json": "^0.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
