--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@tabler/icons-react": "^3.34.0",
+    "@vercel/react-router": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "i18next": "^25.2.1",
