--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/react-router": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hono": "^4.7.11",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-fetch-backend": "^6.0.0",
